Se implementa Facebook connect y formulario de registro express

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"codesleeve/social": "dev-master",
 		"barryvdh/laravel-migration-generator": "dev-master",
 		"orangehill/iseed": "dev-master",
-		"facebook/php-sdk": "*"
+		"facebook/php-sdk": "*",
+		"magniloquent/magniloquent": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
