--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 		"vespakoen/menu": "dev-master",
 		"willdurand/geocoder": "@stable",
 		"guzzlehttp/guzzle": "4.*",
-		"pda/pheanstalk": "2.0"
+		"pda/pheanstalk": "2.0",
+		"freshwork/chilean-bundle": "0.1.*"
 	},
 	"autoload": {
 		"classmap": [
