--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"freshwork/chilean-bundle": "0.1.*",
 		"facebook/php-sdk": "~3.2",
 		"illuminate/html": "~5.0",
-		"guzzlehttp/guzzle": "~4.0"
+		"guzzlehttp/guzzle": "~4.0",
+		"pda/pheanstalk": "~3.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
